fix(CallToAction): Fix height issue on Firefox

--- a/src/sass/modules/call-to-action-banner.scss
+++ b/src/sass/modules/call-to-action-banner.scss
@@ -1,6 +1,5 @@
 .call-to-action-banner-container {
     @include flex(row);
-    height: 100%;
     text-decoration: none;
     transition-duration: .5s;
 
